Table customers {
  customer_id int [pk, increment]
  first_name varchar [not null]
  last_name varchar [not null]
  email varchar [unique, not null]
  city varchar [not null]
  signup_date date [not null]
  acquisition_channel varchar [not null]
}

Table products {
  product_id int [pk, increment]
  product_name varchar [not null]
  category varchar [not null]
  unit_price decimal [not null]
  margin_rate decimal [not null]
}

Table campaigns {
  campaign_id int [pk, increment]
  campaign_name varchar [unique, not null]
  channel varchar [not null]
  start_date date [not null]
  end_date date [not null]
  budget decimal [not null]
}

Table orders {
  order_id int [pk, increment]
  customer_id int [not null]
  order_date date [not null]
  order_status varchar [not null]
}

Table order_items {
  order_id int [pk, not null]
  product_id int [pk, not null]
  quantity int [not null]
  unit_price decimal [not null]
}

Table customer_campaigns {
  customer_id int [pk, not null]
  campaign_id int [pk, not null]
  touch_date date [not null]
  converted boolean [not null]
}

Table city_enrichment {
  city varchar [pk]
  latitude decimal
  longitude decimal
  api_source varchar [not null]
  updated_at timestamp [not null]
}

Table rfm_scores {
  customer_id int [pk]
  recency_days int [not null]
  frequency_orders int [not null]
  monetary_value decimal [not null]
  r_score int [not null]
  f_score int [not null]
  m_score int [not null]
  rfm_score int [not null]
  segment varchar [not null]
  city varchar [not null]
  latitude decimal
  longitude decimal
  calculated_at timestamp [not null]
}

Ref: orders.customer_id > customers.customer_id
Ref: order_items.order_id > orders.order_id
Ref: order_items.product_id > products.product_id
Ref: customer_campaigns.customer_id > customers.customer_id
Ref: customer_campaigns.campaign_id > campaigns.campaign_id
Ref: rfm_scores.customer_id > customers.customer_id

